introduce a new dev actions framework with a dedicated servlet and various administrative utilities, and update existing servlets to integrate with it.